Fixed deprecated for java 21